Setup publish workflow

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'net.neoforged.gradle.userdev' version '7.0.142'
 }
 
-version = '7.0.0'
+version = mod_version
 group = 'me.paulf.fairylights'
 archivesBaseName = 'fairylights'
 
