--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,9 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+# Mod Properties
+mod_version=7.0.0
+
 # NeoForge properties
 minecraft_version=1.21.1
 neo_version=21.1.217
