--- a/gradle.properties
+++ b/gradle.properties
@@ -4,18 +4,18 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Mod Properties
-mod_version=8.0.2
+mod_version=8.0.1
 
 # NeoForge properties
 minecraft_version=1.21.1
 neo_version=21.1.217
-jei_version=19.27.0.340
+jei_version=19.21.2.313
 
-# Mod details
+# Missing Properties
+minecraft_version_range=[1.21.1, 1.22)
+loader_version_range=[4,)
 mod_id=fairylights
 mod_name=Fairy Lights
 mod_license=MIT
 mod_authors=pau101
-mod_description=Fairy Lights introduces decorative string lights, bunting, garland, and more!
-minecraft_version_range=[1.21.1,1.21.2)
-loader_version_range=[4,)
+mod_description=Decorative hanging lights!
